--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,17 +65,17 @@
   	
   	<error-page>
         <error-code>404</error-code>
-        <location>/404.xhtml</location>
+        <location>/error/404.xhtml</location>
     </error-page>
     
     <error-page>
         <error-code>401</error-code>
-        <location>/401.xhtml</location>
+        <location>/error/401.xhtml</location>
     </error-page>
   
     <error-page>
         <error-code>500</error-code>
-        <location>/500.xhtml</location> 
+        <location>/error/500.xhtml</location> 
     </error-page>
 
     <welcome-file-list>
